--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 style="text-align: center;">단어를 올바른 주머니에 넣어보세요!</h1>
-    <!-- 모드 선택 버튼 -->
-    <button id="learnMode">익히기 모드</button>
-    <button id="testMode">시험 모드</button>
+    <h1 style="text-align: center;">올바르게 분류해보세요! 화이팅!</h1>
     <!-- 게임 화면 -->
     <canvas id="gameCanvas" width="800" height="600"></canvas>
     <script src="game.js"></script>
