--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <!-- 시작 화면 -->
-    <div id="start-screen">
-        <h1>진단/선별 검사 공부 게임</h1>
-        <button id="practice-mode">연습모드</button>
-        <button id="test-mode">시험모드</button>
-    </div>
+<div id="start-screen">
+    <h1>진단/선별 검사 공부 게임</h1>
+    <p>Version 1.3.0</p>
+    <button id="practice-mode">연습모드</button>
+    <button id="test-mode">시험모드</button>
+</div>
 
     <!-- 게임 화면 -->
     <canvas id="gameCanvas" width="1560" height="800" style="display: none;"></canvas>
